# chordophone_exploration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
action/: ExecutePath.action  PlayPiece.action  RunEpisode.action
cfg/: Offsets.cfg  StringFitter.cfg  Threshold.cfg  TimeOffset.cfg
config/: guzheng.rviz  guzheng_lightweight.rviz
data/: measure_drift.txt  plucks_example.yaml  strings_example.yaml  strings_pretty_good_estimate.yaml
launch/: all.launch  audio_to_spectrogram.launch  basestation.launch  capture_audio.launch  demo.launch  detect_onset.launch  detect_pluck.launch  explore.launch  fit_strings.launch  full.launch  full_perception.launch  guzheng_onsets.launch  microphone.launch  one_pluck.launch  play_audio_topic.launch  play_piece.launch  play_recording.launch  plectrum.launch  pluck_from_path.launch  pr2.launch  project_onsets.launch  project_plucks.launch  projectors.launch  repeat_after_me_demo.launch  robot_model.launch  run_episode.launch  rviz.launch  spawn_example_d6.launch  spectrum.launch  string_fitter.launch
launch/old/: spawn_example_d6.launch  stop_on_contact_demo.launch
ly/: b4.ly  d6.ly  fis4.ly  lotr.ly  my_favorite_things.ly  scale.ly
meshes/: guzheng_biotac_plectrum_simplified.stl
msg/: ActionParameters.msg  BiotacStamped.msg  CQTStamped.msg  ChordophoneEstimation.msg  ChordophoneString.msg  EpisodeState.msg  ExpressiveRange.msg  NoteDynamics.msg  NoteOnset.msg  PluckEpisodeV1.msg  PluckEpisodeV2.msg  RunEpisodeRequest.msg  TactilePluck.msg
notebooks/: playground.ipynb
notebooks/Analyze Performance Curves/: playground.ipynb
notebooks/Episodes/: EDA.ipynb
notebooks/Evaluate Geometry Exploration/: README.md  experiment.sh  playground.ipynb
notebooks/Explore Actions/: Explore Along String.ipynb  Explore Gradients.ipynb  Explore Repeatability.ipynb  Explore To Target Loudness.ipynb  Loudness comparing strings.ipynb  Plot Trajectories.ipynb
notebooks/Explore Active Exploration/: five repetitions.ipynb  playground.ipynb
notebooks/Explore Controller Goal States/: Explore Controller Goal States.ipynb  controller_goal_measurements_20episodes_full_speed.pkl  controller_goal_measurements_20episodes_full_speed_0_tolerance.pkl
notebooks/Explore Loudness Across Strings/: playground.ipynb
notebooks/Learn Loudness/: GPR play.ipynb  GPR.ipynb  Learn.ipynb
notebooks/Onsets/: librosa_onsets.ipynb
notebooks/Play/: Pluck Multiple.ipynb
notebooks/Ruckig/: 1d string positions.ipynb  2d string plucking.ipynb  Example.ipynb  ly.ipynb
notebooks/Visualize Attempts/: Untitled.ipynb
notebooks/utils/: u.py
scripts/: aggregate_episodes.py  cache_js_test.py  chordophone_state_propagator.py  clear_explored_plucks.sh  cli  demo_publish_d6_events.sh  detect_onset.py  disable_proxy_controllers_for_shoulder.sh  dump_audio.py  explore_via_run_episode.py  fit_strings  fit_strings.py  fitter.sh  forward_dynamic_reconfigure_parameters.py  iterate_dynamics_exploration_experiment.sh  iterate_ransac_experiment.sh  one_pluck.py  onset_to_marker.py  performance_curve_experiment.py  play_piece.py  plectrum_poses.py  plot_action_parameters.py  pluck_loudness.py  pluck_path.py  pluck_to_marker.py  project_events_to_cartesian_frame.py  record_playing.sh  repeat_after_me.py  reset_onset_buffer.sh  rewrite_bag_timestamps.py  run_episode.py  stop_moveit_trajectory_execution.sh  string_fitter_node.py  string_frame_from_chordo_controls.sh  use_explored_plucks.sh  validate_onsets.py
src/: alternate_poses.cpp  detect_pluck.cpp  detect_strings.cpp  feel_string.cpp  path_to_traj.cpp  pluck_from_path.cpp  stop_on_contact.cpp
src/tams_pr2_guzheng/: onset_to_path.py  paths.py  utils.py
urdf/: tams_pr2.urdf.generated  tams_pr2.urdf.xacro
