<?xml version="1.0"?>
<package format="2">
  <name>tams_pr2_guzheng</name>
  <version>0.0.0</version>
  <description>The tams_pr2_guzheng package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
</package>
