<?xml version="1.0"?>
<package format="2">
  <name>tams_pr2_guzheng</name>
  <version>0.0.0</version>
  <description>The tams_pr2_guzheng package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>sr_robot_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bio_ik</depend>
  <depend>rviz_visual_tools</depend>
  <depend>tf2_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>
  <depend>audio_common_msgs</depend>

  <exec_depend>message_generation</exec_depend>

  <depend>load_venv</depend>
  <export>
    <load_venv requirements="${prefix}/requirements.txt" />
  </export>
</package>
